[DAILY] Java 21 Generational ZGC